- Added a menu back in - Added the menu to each page that needed it - fixed a sizing issue with the evt options page

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-navbar color="steelblue2" text-center>
     <ion-title style="font-size: x-large;">Care Instructions</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only menuToggle right>
+        <ion-icon name='menu'></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
