--- a/src/pages/help/help.html
+++ b/src/pages/help/help.html
@@ -6,6 +6,11 @@
     <ion-title>
       Help
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only menuToggle right>
+        <ion-icon name='menu'></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page2"></ion-content>
