--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -3,6 +3,11 @@
     <ion-title>
       Imaging Routes
     </ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only menuToggle right>
+        <ion-icon name='menu'></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
   <components-timer></components-timer><!--The component timer which is present on each page apart from the last known well -->
 </ion-header>
