--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -5,6 +5,11 @@
         <ion-title>
           Mapping Routes<!-- the title of the page -->
         </ion-title>
+        <ion-buttons end>
+          <button ion-button icon-only menuToggle right>
+            <ion-icon name='menu'></ion-icon>
+          </button>
+        </ion-buttons>
       </ion-navbar>
       <components-timer></components-timer>
   </ion-header>
