- added a new map page to explore - added something to the index - changed the look based on if a time was given or not - made sure all the icons worked - cleaned up some code

--- a/src/index.html
+++ b/src/index.html
@@ -43,5 +43,9 @@
 
   <script src="cordova.js"></script>
 
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC2GRIwOatzPmiamkpv3znVK8hi9g4lGoU">
+  </script>
+
 </body>
 </html>
