--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2" text-center >
+  <ion-navbar hideBackButton color="steelblue2" text-center >
     <ion-title>
       Last Known Well
     </ion-title>
