Added the self filling html for different plans and tested them out

--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -14,7 +14,8 @@
 
 <ion-content padding>
   <div id="Destination" text-center></div>
-  <div id="Plan" style="height: 60vh;"></div>
+  <div id="Plan" style="height: 60vh;font-size: large;" >
+  </div>
   <button ion-button color="steelblue1" block on-click="GoToMap()">Map My Route</button>
   <button ion-button color="steelblue1" block on-click="GoToBestPractice()">Patient Care - Best Practice</button>
 </ion-content>
