Modified the pages a bit and got the non site page working but needs some better looks

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="steelblue2" text-center>
-    <ion-title style="font-size: x-large;">Care Instructions</ion-title>
+    <ion-title >Care Instructions</ion-title>
     <ion-buttons end>
       <button ion-button icon-only menuToggle right>
         <ion-icon name='menu'></ion-icon>
@@ -10,5 +10,7 @@
 </ion-header>
 
 <ion-content padding>
+  <div id="Destination" text-center></div>
+<div id="Plan" style="height: 60vh; font-size: large;"></div>
 
 </ion-content>
