--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -36,7 +36,7 @@
       <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour"> <!--if it is a driving route show the correct icon and call the right display function  -->
         <ion-card-content>
           <ion-card-title>
-          {{card.name}} <h1><figure><img src= "./assets/imgs/ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
+          {{card.name}} <h1><figure><img src= "./assets/Travel/Ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
           </ion-card-title>
         <p id="cardinfo" >
           Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
@@ -45,7 +45,7 @@
       <ion-card *ngIf="card.Helipad" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--if it is a helicoper route show the correct icon and call the complec route function  -->
         <ion-card-content>
           <ion-card-title>
-          {{card.name}} <h1><figure><img src= "./assets/imgs/Helicopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
+          {{card.name}} <h1><figure><img src= "./assets/Travel/Helecopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
           </ion-card-title>
         <p id="cardinfo" >
           Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
@@ -54,7 +54,7 @@
       <ion-card *ngIf="card.Airport" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--if it is an airplane route show the correct icon and call the complex route function -->
         <ion-card-content>
           <ion-card-title>
-          {{card.name}} <h1> <figure><img src= "./assets/imgs/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
+          {{card.name}} <h1> <figure><img src= "./assets/Travel/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
           </ion-card-title>
         <p id="cardinfo" >
           Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
@@ -79,7 +79,7 @@
         <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour"> <!--for driving routes to show the right icon and call the nomral route  -->
           <ion-card-content>
             <ion-card-title>
-            {{card.name}} <h1><figure><img src= "./assets/imgs/ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
+            {{card.name}} <h1><figure><img src= "./assets/Travel/Ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
             </ion-card-title>
           <p id="cardinfo" >
             Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
@@ -88,7 +88,7 @@
         <ion-card *ngIf="card.Helipad" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--for helicoper routes to show the right icon and call the complex route function  -->
           <ion-card-content>
             <ion-card-title>
-            {{card.name}} <h1> <figure><img src= "./assets/imgs/Helicopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
+            {{card.name}} <h1> <figure><img src= "./assets/Travel/Helecopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
             </ion-card-title>
           <p id="cardinfo" >
             Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
@@ -97,7 +97,7 @@
         <ion-card *ngIf="card.Airport" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--for airplane routes to show the correct icon and call the complex route function  -->
           <ion-card-content>
             <ion-card-title>
-            {{card.name}} <h1><figure><img src= "./assets/imgs/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
+            {{card.name}} <h1><figure><img src= "./assets/Travel/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
             </ion-card-title>
           <p id="cardinfo" >
             Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
@@ -108,7 +108,7 @@
     </ion-scroll>
     </div>
     <!--the weather information of the origin location  -->
-  <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>
-    <img src= {{this.Data.origin_icon}} style="vertical-align: middle;"></p>
+  <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b> &nbsp; &nbsp;       
+    <img end src= {{this.Data.origin_icon}} width="50px"  height="50px" style="vertical-align: middle; padding-top: 25; padding-bottom: 25;"></p>
      <!--end of the page -->
 </ion-content>
