--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -19,7 +19,7 @@
   <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
     Routes To tPA Capable Hospitals
   </h4>
-  <spinner *ngIf="tpaSpinner"></spinner> <!--The spinner component which will show until results are returned  -->
+  <spinner *ngIf="tpaSpinner" style="height: 30vh;"></spinner> <!--The spinner component which will show until results are returned  -->
 
   <div class="card-scroll" *ngIf="tpashow"> <!--The div that will not be shown until tpashow is set to true -->
     <p style="background-color: yellow;" text-center>Click on the route option for next steps</p>
@@ -108,7 +108,7 @@
     </ion-scroll>
     </div>
     <!--the weather information of the origin location  -->
-  <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b> &nbsp; &nbsp;       
-    <img end src= {{this.Data.origin_icon}} width="50px"  height="50px" style="vertical-align: middle; padding-top: 25; padding-bottom: 25;"></p>
+  <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>    
+    <img src= {{this.Data.origin_icon}} style="vertical-align: middle;" ></p>
      <!--end of the page -->
 </ion-content>
