- changed the time to have a floor due to errors with time - fixed an error that made all places over 6 hours have the same id -changed and tested all of the plans for each site - added forgotten element to the city element - removed some console logs

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -7,6 +7,7 @@
       </button>
     </ion-buttons>
   </ion-navbar>
+  <components-timer></components-timer><!--The component timer which is present on each page apart from the last known well -->
 </ion-header>
 
 <ion-content padding>
