--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,15 +1,9 @@
-<!--
-  Generated template for the WelcomePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>welcome</ion-title>
-  </ion-navbar>
-</ion-header>
 
 <ion-content padding>
-
+  <div style="height: 20vh;"></div>
+<img src="./assets/icon/Logo.png">
+<br>
+<button ion-button color="steelblue1" block on-click="goToLKW()">
+  Next 
+</button>
 </ion-content>
