--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar hideBackButton color="steelblue2" text-center >
+  <ion-navbar hideBackButton text-center >
     <ion-title>
       Last Known Well
     </ion-title>
@@ -11,36 +11,33 @@
   </ion-navbar>
 </ion-header>
 <ion-content no-bounce padding class="card" style="height: 100vh;" id="page2">
-<div style="height:10vh;"></div>
-  <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;font-size: xx-large;">
+<div style="height:8vh;"></div>
+  <h3 id="lastKnownWell-heading5" >
     What time was the patient last known to be well?
   </h3>
-  <div style="height:6vh;"></div>
-  <ion-item (click)="TimeModal()" no-lines style="text-align: center;" >
-    <ion-row justify-content-center>
-    <ion-icon name="help-circle-outline"></ion-icon>
-    <p style="color: blue;">  More Information</p>
+    <ion-row>
+    <p (click)="TimeModal()" style="color: black;width:100%;font-size: larger;">More Information</p>
     </ion-row>
-  </ion-item>
+ 
   
   <div style="height:6vh;"></div>
   <form [formGroup]="timeForm" (ngSubmit)="SubmitTime()"><!--The last known well in hour format-->
-    <ion-item id="lastKnownWellDate">
-  
-      <ion-label>Date</ion-label>
-      <ion-datetime type="date" id="lastKnownWellDateTime" [(ngModel)]="GivenDate" [max]="MaxDate" displayFormat="MMM D" pickerFormat="MMM D" formControlName="date"></ion-datetime><!--The time picker without the date included -->
+    <p text-center> Date</p>
+    <br>
+    <ion-item id="lastKnownWellDate" style="background-color: lightgray;text-align: center;" >
+      <ion-datetime style="width: 95%;" type="date" id="lastKnownWellDateTime" [(ngModel)]="GivenDate" [max]="MaxDate" float-center displayFormat="MMM D" pickerFormat="MMM D" formControlName="date"></ion-datetime><!--The time picker without the date included -->
     </ion-item>
     <div class="spacer" style="height:3vh;" id="lastKnownWell-spacer7"></div>
-    <ion-item id="lastKnownWellTime">
-      <ion-label>Time in EST</ion-label>
-      <ion-datetime displayFormat="HH:mm" pickerFormat="HH mm" [(ngModel)]="myTime" formControlName="time1"></ion-datetime><!--The time picker without the date included -->
+    <p text-center>Time in EST</p>
+    <br>
+    <ion-item id="lastKnownWellTime" style="background-color: lightgray;text-align: center;">
+      <ion-datetime style="width: 95%;" displayFormat="HH:mm" pickerFormat="HH mm" float-center [(ngModel)]="myTime" formControlName="time1"></ion-datetime><!--The time picker without the date included -->
     </ion-item>
     <!--I still need to look into how to properly space this out for a full screen app might need to have it with pixels from the height in the Data Provider -->
-    <div class="spacer" style="height:3vh;" id="lastKnownWell-spacer7"></div>
     <!--Break between inputs and the button to make it consistent-->
-    <div class="spacer" style="height:10vh;" id="lastKnownWell-spacer7"></div>
+    <div class="spacer" style="height:7vh;" id="lastKnownWell-spacer7"></div>
     <br>
-    <button  id="lastKnownWell-button2" ion-button color="steelblue1" [disabled]="!timeForm.valid" type="submit" block ><!--The button will not be acessable until a value is entered for the time-->
+    <button  id="lastKnownWell-button2" ion-button [disabled]="!timeForm.valid" type="submit" block ><!--The button will not be acessable until a value is entered for the time-->
       Next
     </button>
   </form>
