--- a/src/pages/patient-location/patient-location.html
+++ b/src/pages/patient-location/patient-location.html
@@ -14,7 +14,7 @@
 
 </ion-header>
 <ion-content no-bounce padding  style="height: 100vh;"id="page1"><!--vh is currently used to show the total viewable height but may need to be changed as it does not always work -->
-  <h3 id="lastKnownWell-heading5" style="color:#000000;font-weight:400;font-size: xx-large;">
+  <h3 id="lastKnownWell-heading5" >
     Where is the patient located?
   </h3>
   <div style="height:5vh;"></div>
