--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -24,20 +24,20 @@
   <form [formGroup]="timeForm" (ngSubmit)="SubmitTime()"><!--The last known well in hour format-->
     <p text-center> Date</p>
     <br>
-    <ion-item id="lastKnownWellDate" style="background-color: lightgray;text-align: center;" >
+    <ion-item id="lastKnownWellDate" style="background-color: lightgray;text-align: center;" class="roundedEntry">
       <ion-datetime style="width: 95%;" type="date" id="lastKnownWellDateTime" [(ngModel)]="GivenDate" [max]="MaxDate" float-center displayFormat="MMM D" pickerFormat="MMM D" formControlName="date"></ion-datetime><!--The time picker without the date included -->
     </ion-item>
     <div class="spacer" style="height:3vh;" id="lastKnownWell-spacer7"></div>
     <p text-center>Time in EST</p>
     <br>
-    <ion-item id="lastKnownWellTime" style="background-color: lightgray;text-align: center;">
+    <ion-item id="lastKnownWellTime" style="background-color: lightgray;text-align: center;" class="roundedEntry">
       <ion-datetime style="width: 95%;" displayFormat="HH:mm" pickerFormat="HH mm" float-center [(ngModel)]="myTime" formControlName="time1"></ion-datetime><!--The time picker without the date included -->
     </ion-item>
     <!--I still need to look into how to properly space this out for a full screen app might need to have it with pixels from the height in the Data Provider -->
     <!--Break between inputs and the button to make it consistent-->
     <div class="spacer" style="height:7vh;" id="lastKnownWell-spacer7"></div>
     <br>
-    <button  id="lastKnownWell-button2" ion-button [disabled]="!timeForm.valid" type="submit" block ><!--The button will not be acessable until a value is entered for the time-->
+    <button  id="lastKnownWell-button2" ion-button [disabled]="!timeForm.valid" type="submit" block round large><!--The button will not be acessable until a value is entered for the time-->
       Next
     </button>
   </form>
