--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -3,7 +3,7 @@
   <div style="height: 20vh;"></div>
 <img src="./assets/icon/Logo.png">
 <br>
-<button ion-button color="steelblue1" block on-click="goToLKW()">
+<button ion-button  block on-click="goToLKW()" large round>
   Next 
 </button>
 </ion-content>
