- Fixed the city Page - Made the menu the right colour - made changes to the weather aspect

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2" text-center>
+  <ion-navbar text-center>
     <ion-title >Care Instructions</ion-title>
     <ion-buttons end>
       <button ion-button icon-only menuToggle right>
@@ -10,7 +10,7 @@
   <components-timer></components-timer><!--The component timer which is present on each page apart from the last known well -->
 </ion-header>
 
-<ion-content padding>
+<ion-content padding style="color: #006bb6;">
   <div id="Destination" text-center></div>
 <div id="Plan" style="height: 60vh; font-size: large;"></div>
 
