--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar color="steelblue2" text-center>
+  <ion-navbar  text-center>
     <ion-title>More Information</ion-title>
     <ion-buttons end>
       <button ion-button (click)="CloseInfo()">Close</button>
@@ -13,7 +13,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding style="color: #006bb6;">
 <h4>The purpose of this screen is to determine when the patient was last known to be well</h4>
 <br><br>
 <p>This screen asks for both the date and time that the patient was last known to be well. The current date and time should be filled already</p>
