--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -108,7 +108,18 @@
     </ion-scroll>
     </div>
     <!--the weather information of the origin location  -->
-  <p id="weather" style="background-color:powderblue;">Weather in {{this.Data.city}}: <b>{{this.Data.origin_tempreal |number:'.0'}} \u00B0C</b>    
-    <img src= {{this.Data.origin_icon}} style="vertical-align: middle;" ></p>
+      <ion-grid style="background-color: #006bb6;">
+      <ion-row>
+        <ion-col>
+          <p id="weather" style="background-color:#006bb6;color: white;font-size: large;padding-top: 35px;">Weather in<br><b>{{this.Data.city}}</b></p>
+        </ion-col>
+        <ion-col>
+          <p style="font-size: x-large;color: white;padding-top: 35px;" text-center ><b>{{this.Data.origin_tempreal |number:'1.0-0'}}\u00B0C</b></p>
+        </ion-col>
+        <ion-col>
+          <img src= {{this.Data.origin_icon}} style="vertical-align: middle; ">
+        </ion-col>
+      </ion-row>
+    </ion-grid>
      <!--end of the page -->
 </ion-content>
