- Made changes to all of the HTML for the navbar and buttons

--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2" text-center>
+  <ion-navbar text-center>
     <ion-title>
       Imaging Required
     </ion-title>
@@ -19,10 +19,10 @@
   </h3>
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
   <!--this is a simple decision page with some options that are used to navigate the app although the spacer function will probably need to be changed once that is figured out-->
-  <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToImagingRoutes()">
+  <button id="imagingRequired-button3" ion-button round large block on-click="goToImagingRoutes()">
     Yes 
   </button>
-  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToTpaQuestion()">
+  <button id="imagingRequired-button4" ion-button round large block on-click="goToTpaQuestion()">
     No
   </button>
 </ion-content>
