--- a/src/pages/t-pa-question/t-pa-question.html
+++ b/src/pages/t-pa-question/t-pa-question.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2" text-center>
+  <ion-navbar text-center>
     <ion-title>
       tPA Performed?
     </ion-title>
@@ -19,10 +19,10 @@
   </h3>
   <!--This is a simple decision page that will bring you to the EVT-options page if you select yes and the treatment page with both EVT and tPA if you select no -->
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
-  <button id="imagingRequired-button3" ion-button color="steelblue1" block on-click="goToEVTOptions()">
+  <button id="imagingRequired-button3" ion-button round large block on-click="goToEVTOptions()">
     Yes 
   </button>
-  <button id="imagingRequired-button4" ion-button color="steelblue1" block on-click="goToTreatment()">
+  <button id="imagingRequired-button4" ion-button round large block on-click="goToTreatment()">
     No
   </button>
 </ion-content>
