--- a/src/pages/next-steps/next-steps.html
+++ b/src/pages/next-steps/next-steps.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2" text-center >
+  <ion-navbar  text-center >
     <ion-title>
      Next Steps
     </ion-title>
@@ -12,10 +12,10 @@
   <components-timer></components-timer>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding style="color: #006bb6;">
   <div id="Destination" text-center></div>
   <div id="Plan" style="height: 60vh;font-size: large;" >
   </div>
-  <button ion-button color="steelblue1" block on-click="GoToMap()">Map My Route</button>
-  <button ion-button color="steelblue1" block on-click="GoToBestPractice()">Patient Care - Best Practice</button>
+  <button ion-button block on-click="GoToMap()" round large>Map My Route</button>
+  <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
 </ion-content>
