--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="steelblue2" text-center>
+  <ion-navbar  text-center>
     <ion-title>
       Treatment Options
     </ion-title>
@@ -16,7 +16,7 @@
 <ion-content no-bounce id="Treatment-Page">
  
 
-  <h4 id="treatment-heading6" style="color:#000000;font-size: x-large;">
+  <h4 id="treatment-heading6" style="color:#006bb6;font-size: x-large;">
     Routes To tPA Capable Hospitals
   </h4>
   <spinner *ngIf="tpaSpinner" style="height: 30vh;"></spinner> <!--The spinner component which will show until results are returned  -->
@@ -38,7 +38,7 @@
           <ion-card-title>
           {{card.name}} <h1><figure><img src= "./assets/Travel/Ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
           </ion-card-title>
-        <p id="cardinfo" >
+        <p id="cardinfo" style="color: black;">
           Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
         </ion-card-content>
       </ion-card>
@@ -47,7 +47,7 @@
           <ion-card-title>
           {{card.name}} <h1><figure><img src= "./assets/Travel/Helecopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
           </ion-card-title>
-        <p id="cardinfo" >
+        <p id="cardinfo" style="color: black;">
           Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
         </ion-card-content>
       </ion-card>
@@ -56,7 +56,7 @@
           <ion-card-title>
           {{card.name}} <h1> <figure><img src= "./assets/Travel/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
           </ion-card-title>
-        <p id="cardinfo" >
+        <p id="cardinfo" style="color: black;">
           Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
         </ion-card-content>
       </ion-card>
@@ -66,7 +66,7 @@
   </div>
    <!--The end of the tpa section and start of evt section  -->
 <br><br>
-  <h4 id="treatment-heading7" style="color:#000000;font-size: x-large;">
+  <h4 id="treatment-heading7" style="color:#006bb6;font-size: x-large;">
     Routes To EVT Capable Hospitals 
   </h4>
   <spinner *ngIf="evtSpinner"></spinner> <!--The spinner which stops after evt routes are returned -->
@@ -81,7 +81,7 @@
             <ion-card-title>
             {{card.name}} <h1><figure><img src= "./assets/Travel/Ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
             </ion-card-title>
-          <p id="cardinfo" >
+          <p id="cardinfo" style="color: black;">
             Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
           </ion-card-content>
         </ion-card>
@@ -90,7 +90,7 @@
             <ion-card-title>
             {{card.name}} <h1> <figure><img src= "./assets/Travel/Helecopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
             </ion-card-title>
-          <p id="cardinfo" >
+          <p id="cardinfo" style="color: black;">
             Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
           </ion-card-content>
         </ion-card>
@@ -99,7 +99,7 @@
             <ion-card-title>
             {{card.name}} <h1><figure><img src= "./assets/Travel/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
             </ion-card-title>
-          <p id="cardinfo" >
+          <p id="cardinfo" style="color: black;">
             Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
           </ion-card-content>
         </ion-card>
