--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -14,7 +14,7 @@
 
 <ion-content padding id="imaging-required">
    
-  <h3 id="imagingRequired-heading3" style="color:#000000;font-weight:400;font-size: xx-large;">
+  <h3 id="imagingRequired-heading3" style="color:#006bb6;font-weight:400;font-size: xx-large;">
     Does the patient require imaging?
   </h3>
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
