- changed and fixed minor things found when taking screenshots

--- a/src/pages/map-explore/map-explore.html
+++ b/src/pages/map-explore/map-explore.html
@@ -3,7 +3,7 @@
     
     <ion-navbar  text-center>
       <ion-title>
-        Mapping Routes<!-- the title of the page -->
+      Map<!-- the title of the page -->
       </ion-title>
       <ion-buttons end>
         <button ion-button icon-only menuToggle right>
