--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -25,6 +25,6 @@
   <br>
   <li>If the time passed is between 4 and a half and 6 hours the timer will be <span style="color:yellow">yellow</span> and the patient will only be eligible for EVT</li>
   <br>
-  <li>If the time passed is over 6 hours the timer will be <span style="color: red;">red</span> and the patient will be out of the usual recovery range</li>
+  <li>If the time passed is over 6 hours the timer will be <span style="color: red;">red</span> and the patient will be out of the usual treatment window</li>
 </ul>
 </ion-content>
