- changed the colour of the buttons to be correct

--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar hideBackButton text-center >
+  <ion-navbar hideBackButton style="color: #006bb6;" text-center >
     <ion-title>
       Last Known Well
     </ion-title>
