- changed the colours of the timer and LKW modal

--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -21,10 +21,10 @@
 <p>The time passed since the patient was last known to be well determines what kind of treatment they are eligible to receive</p>
 <br><br>
 <ul>
-  <li>If the time passed is under four and a half hours the timer will be <span style="color: green;">green</span> and the patient will be eligible for both tPA and EVT</li>
+  <li>If the time passed is under four and a half hours the timer will be <span style="color:#008742;">green</span> and the patient will be eligible for both tPA and EVT</li>
   <br>
-  <li>If the time passed is between 4 and a half and 6 hours the timer will be <span style="color:yellow">yellow</span> and the patient will only be eligible for EVT</li>
+  <li>If the time passed is between 4 and a half and 6 hours the timer will be <span style="color: #db811a">orange</span> and the patient will only be eligible for EVT</li>
   <br>
-  <li>If the time passed is over 6 hours the timer will be <span style="color: red;">red</span> and the patient will be out of the usual treatment window</li>
+  <li>If the time passed is over 6 hours the timer will be <span style="color: #d2232a;">red</span> and the patient will be out of the usual treatment window</li>
 </ul>
 </ion-content>
